--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -1,36 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500);
-
-%snowman-mixin{
-    margin: 0 auto;
-    clip-path: circle(50% at 50% 50%);
-    background-color: white;
-}
-
-body {
-  font: 100% Roboto, sans-serif;
-  background: url('/images/snow.jfif') 50% 50% no-repeat;
-  background-size: cover;
-  padding: 50px;
-  margin: 0;
-  height: 100%;
-  width: 100%;
-}
-
-// snowman
-#myCircle {
-  height: 10em;
-  width: 10em;
-  @extend %snowman-mixin;
-}
-#myCircle2 {
-  @extend %snowman-mixin;
-  height: 15em;
-  width: 15em;
-
-  // margin-top: -35%;
-}
-#nose{
-  clip-path: polygon(94% 71%, 96% 73%, 24% 89%, 8% 57%);
-  background-color: orange;
-  margin: 0 auto;
+.blue-eyes .eye-color {
+fill: blue;
 }
