--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,3 +4,10 @@
 .sad .mouth {
   transform: rotate(180deg) scale(0.5);
   transform-origin: 340px 390px; }
+
+@keyframes moveEyes {
+  0% { }
+  100% { } }
+
+.move-around .inner-eye-group {
+  animation: movesEyes 5s; }
