--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,8 +6,10 @@
   transform-origin: 340px 390px; }
 
 @keyframes moveEyes {
-  0% { }
-  100% { } }
+  0% {
+    transform: translate(-18px, -20px); }
+  100% {
+    transform: translate(18px, 0); } }
 
 .move-around .inner-eye-group {
-  animation: movesEyes 5s; }
+  animation: moveEyes 5s; }
